// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentActions Dispatches loadGeneExpression action with the right list of genes when Add is clicked 1`] = `
{
  "payload": {
    "componentUuid": "asd",
    "experimentId": "1234",
    "genes": [
      "Gzma",
      "Lyz2",
      "GeneA",
      "GeneB",
      "GeneC",
    ],
  },
  "type": "genes/expressionLoading",
}
`;

exports[`ComponentActions Dispatches loadGeneExpression action with the right list of genes when Add is clicked 2`] = `
{
  "payload": {
    "componentUuid": "asd",
    "genes": [
      "Gzma",
      "Lyz2",
      "GeneA",
      "GeneB",
      "GeneC",
    ],
    "newGenes": {
      "orderedGeneNames": [
        "GeneA",
        "GeneB",
        "GeneC",
      ],
      "rawExpression": {
        "datatype": undefined,
        "index": [
          0,
          0,
          2,
          0,
          2,
        ],
        "mathjs": "SparseMatrix",
        "ptr": [
          0,
          1,
          3,
          5,
        ],
        "size": [
          3,
          3,
        ],
        "values": [
          1,
          2,
          5,
          1,
          6,
        ],
      },
      "stats": {
        "rawMean": [
          0.3,
          2.3,
          1.3,
        ],
        "rawStdev": [
          0.4,
          2,
          1,
        ],
        "truncatedMax": [
          1,
          3,
          5,
        ],
        "truncatedMin": [
          0,
          2,
          1,
        ],
      },
      "truncatedExpression": {
        "datatype": undefined,
        "index": [
          0,
          0,
          2,
          0,
          2,
        ],
        "mathjs": "SparseMatrix",
        "ptr": [
          0,
          1,
          3,
          5,
        ],
        "size": [
          3,
          3,
        ],
        "values": [
          1,
          2,
          3,
          0.5,
          1,
        ],
      },
      "zScore": {
        "datatype": undefined,
        "index": [
          0,
          0,
          2,
          0,
          2,
        ],
        "mathjs": "SparseMatrix",
        "ptr": [
          0,
          1,
          3,
          5,
        ],
        "size": [
          3,
          3,
        ],
        "values": [
          1,
          1,
          3,
          3,
          1,
        ],
      },
    },
  },
  "type": "genes/expressionLoaded",
}
`;

exports[`ComponentActions Dispatches loadGeneExpression action with the right list of genes when Overwrite is clicked 1`] = `
{
  "payload": {
    "componentUuid": "asd",
    "experimentId": "1234",
    "genes": [
      "Gzma",
    ],
  },
  "type": "genes/expressionLoading",
}
`;

exports[`ComponentActions Dispatches loadGeneExpression action with the right list of genes when Overwrite is clicked 2`] = `
{
  "payload": {
    "componentUuid": "asd",
    "experimentId": "1234",
    "genes": [
      "Gzma",
    ],
  },
  "type": "genes/expressionLoaded",
}
`;

exports[`ComponentActions Dispatches loadGeneExpression action with the right list of genes when Remove is clicked 1`] = `
{
  "payload": {
    "componentUuid": "asd",
    "experimentId": "1234",
    "genes": [
      "Lyz2",
    ],
  },
  "type": "genes/expressionLoading",
}
`;

exports[`ComponentActions Dispatches loadGeneExpression action with the right list of genes when Remove is clicked 2`] = `
{
  "payload": {
    "componentUuid": "asd",
    "experimentId": "1234",
    "genes": [
      "Lyz2",
    ],
  },
  "type": "genes/expressionLoaded",
}
`;
